@@ -11,6 +11,7 @@ import org.openqa.selenium.remote.RemoteWebDriver;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -21,23 +22,29 @@ public class PositiveTests {
 
     @Test
     public void test1() throws MalformedURLException {
-        System.out.println("Starting test configuration...");
+        ChromeOptions options = new ChromeOptions();
 
-        DesiredCapabilities capabilities = new DesiredCapabilities();
-        capabilities.setCapability("browserName", "chrome");
-        capabilities.setCapability("browserVersion", "119.0");
-        capabilities.setCapability("selenoid:options", new HashMap<String, Object>() {{
-            put("enableVNC", true);
-            put("enableVideo", false);
+        options.setCapability("selenoid:options", new HashMap<String, Object>() {{
+            /* How to add test badge */
+            put("name", "Test badge...");
+
+            /* How to set session timeout */
+            put("sessionTimeout", "15m");
+
+            /* How to set timezone */
+            put("env", new ArrayList<String>() {{
+                add("TZ=UTC");
+            }});
+
+            /* How to add "trash" button */
+            put("labels", new HashMap<String, Object>() {{
+                put("manual", "true");
+            }});
+
+            /* How to enable video recording */
+            put("enableVideo", true);
         }});
-
-        System.out.println("Connecting to Selenoid...");
-        URL selenoidUrl = URI.create("http://localhost:4444/wd/hub").toURL();
-        WebDriver driver = new RemoteWebDriver(selenoidUrl, capabilities);
-
-        System.out.println("Opening website...");
-        driver.get("https://www.google.com");
-
+        RemoteWebDriver driver = new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), options);
         System.out.println("Test completed successfully!");
         driver.quit();
     }
